187 add openapi startgame call
